--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+.DS_Store
+
+# local env files
+.env.local
+.env.*.local
+
+# Editor directories and files
+.idea
+.vscode
+.husky
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 k6
